<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.fragments.AddBMIDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.fragments.AddBMIDetails">

        <RelativeLayout
            android:id="@+id/relativeHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/iv_bg__gradiant_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_bmi_details"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvEnterDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:text="@string/enter_personal_detail"
            android:textColor="@color/color_text_green"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeHeader" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:autofillHints="@string/hint_name"
            android:background="@drawable/iv_bg_name"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:padding="@dimen/dp_12"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterDetail" />

        <TextView
            android:id="@+id/tvCalculateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:text="@string/calculate_your_body_mass_index"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />


        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="start"
            android:padding="@dimen/dp_18"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvHeight"
            app:layout_constraintTop_toBottomOf="@+id/tvCalculateHeader" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:padding="@dimen/dp_18"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tvWeight"
            app:layout_constraintRight_toLeftOf="@+id/tvGender"
            app:layout_constraintTop_toBottomOf="@+id/tvCalculateHeader" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_25"
            android:gravity="end"
            android:padding="@dimen/dp_18"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tvHeight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCalculateHeader" />

        <androidx.cardview.widget.CardView
            android:id="@+id/pickerConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_25"
            android:elevation="@dimen/dp_20"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_5"
            app:cardElevation="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeight">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <NumberPicker
                    android:id="@+id/npWeight"
                    android:layout_width="50dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:theme="@style/NumberPickerText" />

                <NumberPicker
                    android:id="@+id/npHeight"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_5"
                    android:theme="@style/NumberPickerText" />

                <NumberPicker
                    android:id="@+id/npGender"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:theme="@style/NumberPickerText" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/iv_bg_calculate"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@+id/pickerConstraintLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>