<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <View
        android:id="@+id/viewFirst"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/color_text_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginVertical="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:text="@string/rate_us"
        android:textStyle="bold"
        android:textColor="@color/color_text_green"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFirst" />

    <View
        android:id="@+id/viewSecond"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_text_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="2.5"
        android:layout_marginTop="@dimen/dp_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSecond" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/iv_bg__gradiant_header"
        android:lines="1"
        android:paddingVertical="@dimen/dp_15"
        android:paddingHorizontal="@dimen/dp_3"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        android:layout_marginVertical="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/tvSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/iv_bg__gradiant_header"
        android:paddingVertical="@dimen/dp_15"
        android:paddingHorizontal="@dimen/dp_3"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginVertical="@dimen/dp_30"
        app:layout_constraintLeft_toRightOf="@+id/tvCancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>