<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.fragments.AddBMIDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootLayout"
        tools:context=".ui.main.fragments.AddBMIDetails">

        <RelativeLayout
            android:id="@+id/relativeHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/iv_bg__gradiant_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/bmi_details"
                android:padding="@dimen/dp_15"
                android:src="@drawable/iv_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bmi_details"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_35"
            android:layout_marginVertical="@dimen/dp_50"
            android:background="@drawable/iv_bg_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeHeader">

            <View
                android:id="@+id/viewFirst"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:layout_marginTop="@dimen/dp_50"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:text="@string/body_mass_index"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewFirst" />

            <View
                android:id="@+id/viewSecond"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_50"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

            <TextView
                android:id="@+id/tvBmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_50"
                android:gravity="center_horizontal"
                tools:text="16.99"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewSecond" />

            <View
                android:id="@+id/viewThird"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginHorizontal="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_2"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBmi" />


            <TextView
                android:id="@+id/tvBmiMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginHorizontal="@dimen/dp_2"
                android:gravity="center_horizontal"
                tools:text="HELLO ABHISHEK, YOU ARE NORMAL"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewThird" />

            <TextView
                android:id="@+id/tvNormalBmiRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginHorizontal="@dimen/dp_2"
                android:gravity="center_horizontal"
                android:text="@string/normal_bmi_range_18_5kg_m2_25kg_m2"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBmiMessage" />

            <TextView
                android:id="@+id/tvPonderalIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/dp_2"
                android:text="@string/ponderal_index_10_64kg_m3"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNormalBmiRange" />

            <LinearLayout
                android:id="@+id/linearShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/iv_bg_share"
                android:gravity="center"
                android:layout_marginStart="@dimen/dp_20"
                android:orientation="horizontal"
                ads:layout_constraintWidth_percent=".4"
                android:padding="@dimen/dp_5"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintRight_toLeftOf="@+id/linearRate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPonderalIndex">

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:contentDescription="@string/bmi_details"
                    android:padding="@dimen/dp_8"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                ads:layout_constraintWidth_percent=".4"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/iv_bg_share"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp_5"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintLeft_toRightOf="@+id/linearShare"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPonderalIndex">

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:contentDescription="@string/bmi_details"
                    android:padding="@dimen/dp_8"
                    android:src="@drawable/iv_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:padding="@dimen/dp_8"
                    android:text="@string/rate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivScreenShot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp_50"
            android:contentDescription="@string/bmi_details"
            android:scaleType="fitCenter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>